--- a/views/login.html
+++ b/views/login.html
@@ -118,9 +118,12 @@
     </form>
     <div id="errorMessage" class="error-message"></div>
     <div class="footer">
+        <p id="passwordError" class="hidden" style="color: red;">Password atau username Anda salah!!!</p>
         <a href="regist.html" class="text-teal-600 hover:underline">Daftar Akun</a>
         <br>
         <a href="forgot.html" class="text-teal-600 hover:underline">Forgot Password!!</a>
+    </from>
+        
 
 
         <br>
